crates/paladin-core/tests/trybuild/secret_not_serialize.stderr
error[E0277]: the trait bound `Secret: serde::Serialize` is not satisfied
  --> tests/trybuild/secret_not_serialize.rs:10:26
   |
10 |     requires_serialize::<paladin_core::Secret>();
   |                          ^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `Secret`
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `Secret` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `requires_serialize`
  --> tests/trybuild/secret_not_serialize.rs:7:26
   |
 7 | fn requires_serialize<T: serde::Serialize>() {}
   |                          ^^^^^^^^^^^^^^^^ required by this bound in `requires_serialize`
